[package]
name        = "canister"
edition     = "2018"
description = "Deploy binaries from Google Container Registry (gcr.io)"
version     = "0.1.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>", "Shella Stephens <shella@iqlusion.io>"]
license     = "Apache-2.0"
homepage    = "https://github.com/iqlusioninc/canister"
readme      = "README.md"
categories  = ["command-line-utilities"]
keywords    = ["container", "devops", "docker", "deployment", "systemd"]

[dependencies]
failure = "0.1"
failure_derive = "0.1"
hex = "0.3"
hyper = "0.11"
percent-encoding = "1"
lazy_static = "1"
libflate = "0.1"
log = "0.4"
reqwest = "0.9"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
subtle-encoding = "0.3"
sha2 = "0.7"
tar = "0.4"
gumdrop = "0.5"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
canister = { path = "/usr/bin/canister" }

[dependencies.abscissa]
version = "0.1.0-pre.1"
default-features = false
features = ["application", "signals", "secrets", "time"]
