[package]
name        = "canister"
edition     = "2018"
description = "Deploy binaries from Google Container Registry (gcr.io)"
version     = "0.1.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>", "Shella Stephens <shella@iqlusion.io>"]
license     = "Apache-2.0"
homepage    = "https://github.com/iqlusioninc/canister"
readme      = "README.md"
categories  = ["command-line-utilities"]
keywords    = ["container", "devops", "docker", "deployment", "systemd"]

[dependencies]
failure = "0.1"
gumdrop = "0.7"
hex = "0.4"
hyper = "0.11"
percent-encoding = "2"
lazy_static = "1"
libflate = "0.1"
log = "0.4"
os_pipe = "0.9"
reqwest = "0.9"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
subtle-encoding = "0.5"
sha2 = "0.8"
tar = "0.4"
walkdir = "2"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
canister = { path = "/usr/bin/canister" }

[dependencies.abscissa_core]
version = "0.4.0"
