[package]
name        = "canister"
edition     = "2021"
rust-version = "1.69"
description = "Deploy binaries from Google Container Registry (gcr.io)"
version     = "0.3.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>", "Shella Stephens <shella@iqlusion.io>"]
license     = "Apache-2.0"
homepage    = "https://github.com/iqlusioninc/canister"
readme      = "README.md"
categories  = ["command-line-utilities"]
keywords    = ["container", "devops", "docker", "deployment", "systemd"]

[dependencies]
clap = "4"
hex = "0.4"
hyper = "0.14"
percent-encoding = "2"
libflate = "2.0"
log = "0.4"
os_pipe = "1.1"
reqwest = "0.12"
thiserror = "1"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
subtle-encoding = "0.5"
sha2 = "0.10"
tar = "0.4"
walkdir = "2"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
canister = { path = "/usr/bin/canister" }

[dev-dependencies]
once_cell = "1"

[dependencies.abscissa_core]
version = "0.7"
